# vec3-rs

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: rust.yml
benches/: vector3_benches.rs
src/: consts.rs  convert.rs  float_lerp.rs  lib.rs  ops.rs  ops_scalar.rs
