[package]
name = "vec3-rs"
version = "0.2.7"
edition = "2024"
description = "minimal 3d vector implementation"
repository = "https://github.com/DazorPlasma/vec3-rs"
authors = ["Dazor Plasma <dazorplasma@proton.me>"]
documentation = "https://docs.rs/vec3-rs"
readme = "README.md"
license = "MIT"
keywords = ["math", "vector", "geometry", "3d"]
categories = ["graphics", "mathematics"]
rust-version = "1.85.0"


[dependencies]
num-traits = "0.2.19"
rand = { version = "0.9.2", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.1"
rand = "0.9.2"

[features]
default = []
random = ["dep:rand"]

[[bench]]
name = "vector3_benches"
harness = false

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
debug = true
