[package]
name = "vec3-rs"
version = "0.3.0"
edition = "2024"
description = "minimal 3d vector implementation"
repository = "https://github.com/DazorPlasma/vec3-rs"
authors = ["Dazor Plasma <dazorplasma@proton.me>"]
documentation = "https://docs.rs/vec3-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["math", "vector", "geometry", "3d"]
categories = ["graphics", "mathematics"]
rust-version = "1.89.0"


[dependencies]
num-traits = "0.2.19"
rand = { version = "0.10.0", optional = true }
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"
serde = "1.0.228"

[features]
default = []
random = ["dep:rand"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "vector3_benches"
harness = false


[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
debug = true

[lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
nursery = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }

[lints.rust]
warnings = { level = "deny", priority = 0 }
missing_docs = { level = "deny", priority = 0 }
