[package]
name = "vec3-rs"
version = "0.3.3"
edition = "2024"
description = "minimal 3d vector implementation"
repository = "https://github.com/DazorPlasma/vec3-rs"
authors = ["Dazor Plasma <dazorplasma@proton.me>"]
documentation = "https://docs.rs/vec3-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["math", "vector", "geometry", "3d"]
categories = ["graphics", "mathematics"]
rust-version = "1.93.0"


[dependencies]
num-traits = { version = "0.2.19", default-features = false }
rand = { version = "0.10.0", optional = true, default-features = false }
serde = { version = "1.0.228", optional = true, default-features = false, features = [
	"serde_derive",
] }
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"
serde = "1.0.228"

[features]
default = ["std"]
std = ["serde/std", "rand/std", "num-traits/std"]
libm = ["num-traits/libm"]
random = ["dep:rand", "std"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "vector3_benches"
harness = false


[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
debug = true

[lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
cargo = { level = "deny", priority = 3 }
multiple_crate_versions = { level = "allow", priority = 4 }

[lints.rust]
warnings = { level = "deny", priority = 0 }
missing_docs = { level = "deny", priority = 0 }
